--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "posttest": "npm run check"
   },
   "devDependencies": {
+    "@types/express": "^4.16.1",
     "@types/node": "^12.0.4",
     "gts": "^1.0.0",
     "typescript": "~3.4.0"
