--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/node": "^12.0.4",
+    "@types/socket.io": "^2.1.2",
     "gts": "^1.0.0",
+    "nodemon": "^1.19.1",
     "typescript": "~3.4.0"
   },
   "dependencies": {
@@ -33,6 +35,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "helmet": "^3.18.0"
+    "helmet": "^3.18.0",
+    "socket.io": "^2.2.0"
   }
 }
