--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.16.1",
     "@types/node": "^12.0.4",
     "@types/socket.io": "^2.1.2",
+    "dotenv": "^8.0.0",
     "gts": "^1.0.0",
     "nodemon": "^1.19.1",
     "typescript": "~3.4.0"
