--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/mongodb": "^3.1.28",
     "@types/mongoose": "^5.5.5",
     "@types/node": "^12.0.4",
     "@types/socket.io": "^2.1.2",
@@ -38,7 +39,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
-    "mongoose": "^5.5.12",
-    "socket.io": "^2.2.0"
+    "mongoose": "^5.5.14",
+    "socket.io": "^2.2.0",
+    "typegoose": "^5.7.1"
   }
 }
